Fixed the alignment

--- a/css/style.css
+++ b/css/style.css
@@ -166,10 +166,10 @@ h5 {
     text-shadow: 1.5px 1.5px #34495e;
     color: #fff;
 }
-.maintext
-{
-	text-align: center;
-	color:antiquewhite
+.maintext {
+    text-align: center;
+    margin-bottom: -15px;
+    color: #fff;
 }
 .buttonclass2
 {
